custom the audio bar and add a website logo

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -148,5 +148,5 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-  <link rel="shortcut icon" href="/assets/img/mywebsite.ico">
+  <link rel="shortcut icon" href="https://zer0o0.github.io/intergap.github.io/assets/img/mywebsite.ico">
 </head>
