--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -53,6 +53,12 @@
       </div>
     </div>
   </div>
+  {% if page.music %}
+  <audio  controls preload autoplay loop>
+    <source src="https://zer0o0.github.io/intergap.github.io/assets/audio/silence_voice.mp3" type="audio/mpeg">
+    Your browser does not support this audio format.
+  </audio>
+  {% endif %}
   <span class='img-desc'></span>
 </div>
 {% endif %}
