--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -54,7 +54,7 @@
     </div>
   </div>
   {% if page.music %}
-  <audio  controls preload autoplay loop>
+  <audio  id="player" controls preload autoplay loop>
     <source src="https://zer0o0.github.io/intergap.github.io/assets/audio/silence_voice.mp3" type="audio/mpeg">
     Your browser does not support this audio format.
   </audio>
