--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -148,5 +148,6 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-  <link rel="shortcut icon" href="https://zer0o0.github.io/intergap.github.io/assets/img/mywebsite.ico">
+  {{ 'assets/img/universe_seal_404.png' | relative_url }}
+  <link rel="shortcut icon" href="{{ '/assets/img/mywebsite.ico' | relative_url }}">
 </head>
