--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -148,5 +148,5 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-  <link rel="shortcut icon" href="{{ '/assets/img/mywebsite.ico' | relative_url }}">
+  <link rel="shortcut icon" href="{{ '/assets/img/favicon.ico' | relative_url }}">
 </head>
